cros: do not update caption buttons on minimized window

changes:
Toggle tablet mode is set to update caption buttons to update size
button visibility. In minimized state, frame is not maximized or
fullscreen, thus the size button will be set to MAXIMIZE button not
RESTORE button. This CL avoids such update when window is minimized.

Bug: 822890, 783310
Test: manual test and added test coverage
Change-Id: Id35db6dcfbc79e6783caf8706fb83d25402f9c21
Reviewed-on: https://chromium-review.googlesource.com/967414
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Qiang Xu <warx@google.com>
Cr-Commit-Position: refs/heads/master@{#545133}
Former-commit-id: 97524c138aa402ef7fcf06834c37173edde481fc